Fixed a bug that changed names in case of a draw. Also added the key value to the NavItems and wrappeed the table of scoreboard inside a <tbody> JSX element

--- a/src/components/UI/Sidedrawer/Sidedrawer.module.css
+++ b/src/components/UI/Sidedrawer/Sidedrawer.module.css
@@ -5,7 +5,7 @@
   height: 100%;
   width: 100px;
   background-color: goldenrod;
-  z-index: 200;
+  z-index: 202;
 }
 .Sidedrawer ul {
   padding: 0;
